update to soccer layout homepage with middle outline field dropdown and wider top 5 players

--- a/markup/_dist/assets/css/style.css
+++ b/markup/_dist/assets/css/style.css
@@ -10260,6 +10260,9 @@ p {
   box-shadow: 3px 0 7px rgba(0, 0, 0, 0.21);
   border-radius: 0.625rem; }
 
+.text-center {
+  text-align: center; }
+
 .nl-section.homepage {
   padding: 1.5rem 2.25rem; }
   .nl-section.homepage .carousel-item.active, .nl-section.homepage .carousel-item-next, .nl-section.homepage .carousel-item-prev {
@@ -10368,6 +10371,8 @@ p {
     bottom: 43%; }
   .homepage .no-padding {
     padding: 0 15px; }
+  .homepage .no-padding-all-sides {
+    padding: 0; }
   @media only screen and (max-width: 575px) {
     .homepage .no-padding-mobile {
       padding: 0px; } }
@@ -10474,7 +10479,8 @@ p {
     font-size: 1.175rem;
     line-height: 0.95rem;
     font-weight: 500;
-    margin-bottom: 1.5rem; }
+    margin-bottom: 1.5rem;
+    text-align: center; }
   .homepage .manager-info {
     height: 50px;
     padding: 5px 15px 0; }
@@ -10859,18 +10865,45 @@ p {
       color: #e89708;
       margin: 0;
       padding: 0;
-      font-size: 13px; }
+      font-size: 13px;
+      text-align: center; }
     .homepage .player-info h5 {
       margin-bottom: 15px; }
       @media only screen and (min-width: 768px) and (max-width: 991px) {
         .homepage .player-info h5 {
           margin-bottom: 22px; } }
+      @media only screen and (min-width: 992px) and (max-width: 1200px) {
+        .homepage .player-info h5 {
+          line-height: 1.35rem; } }
+      @media only screen and (min-width: 1367px) and (max-width: 1440px) {
+        .homepage .player-info h5 {
+          line-height: 1.65rem; } }
+      @media only screen and (min-width: 1201px) and (max-width: 1366px) {
+        .homepage .player-info h5 {
+          line-height: 1.65rem; } }
       @media (min-width: 992px) {
         .homepage .player-info h5 {
           margin-bottom: 28px; } }
+      @media only screen and (min-width: 1441px) and (max-width: 1680px) {
+        .homepage .player-info h5 {
+          font-size: 1.65rem;
+          line-height: 1.45rem; } }
+      @media (min-width: 1681px) {
+        .homepage .player-info h5 {
+          font-size: 1.65rem;
+          line-height: 1.45rem; } }
     .homepage .player-info i {
       font-size: 24px;
-      color: #ffffff; }
+      color: #ffffff;
+      text-align: center; }
+      @media only screen and (min-width: 1441px) and (max-width: 1680px) {
+        .homepage .player-info i {
+          font-size: 2rem; } }
+      @media (min-width: 1681px) {
+        .homepage .player-info i {
+          font-size: 2.15rem; } }
+      .homepage .player-info i.fa {
+        display: block; }
     @media only screen and (min-width: 768px) and (max-width: 991px) {
       .homepage .player-info {
         display: inline-block !important; } }
