--- a/markup/_layouts/_content/_homepage/top5-manager-soccer.jade
+++ b/markup/_layouts/_content/_homepage/top5-manager-soccer.jade
@@ -36,33 +36,28 @@ h5.hidden-xxs.subtitle TOP 5
 
 div.row
     button.mobile-menu.dropdown(type='button', data-toggle='modal', data-target='#weekModal') Choose Week
-    div.mobile-menu
-        a.active(href="" data-target="#carouselTop5Managers" data-slide-to="0")    
-            div.number
-                p.rank-manager-top5 1
-            p MattRyan1
+    div.mobile-menu.active(data-target="#carouselTop5Managers" data-slide-to="0")
+        div.number
+            p.rank-manager-top5 1
+        p Matt Ryan1
 div.row
-    div.mobile-menu(data-toggle="tab" href="#manager2" role="tab")
-        a.active(href="" data-target="#carouselTop5Managers" data-slide-to="1")        
-            div.number
-                p.rank-manager-top5 2
-            p MattRyan2
-    div.mobile-menu(data-toggle="tab" href="#manager3" role="tab")
-        a.active(href="" data-target="#carouselTop5Managers" data-slide-to="2")        
-            div.number
-                p.rank-manager-top5 3
-            p MattRyan3
+    div.mobile-menu.active(data-target="#carouselTop5Managers" data-slide-to="1")                
+        div.number
+            p.rank-manager-top5 2
+        p Matt Ryan2
+    div.mobile-menu.active(data-target="#carouselTop5Managers" data-slide-to="2")                
+        div.number
+            p.rank-manager-top5 3
+        p Matt Ryan3
 div.row
-    div.mobile-menu(data-toggle="tab" href="#manager4" role="tab")
-        a.active(href="" data-target="#carouselTop5Managers" data-slide-to="3")        
-            div.number
-                p.rank-manager-top5 4
-            p MattRyan4
-    div.mobile-menu(data-toggle="tab" href="#manager5" role="tab")
-        a.active(href="" data-target="#carouselTop5Managers" data-slide-to="4")        
-            div.number
-                p.rank-manager-top5 5
-            p MattRyan5 
+    div.mobile-menu.active(data-target="#carouselTop5Managers" data-slide-to="3")                
+        div.number
+            p.rank-manager-top5 4
+        p Matt Ryan4
+    div.mobile-menu.active(data-target="#carouselTop5Managers" data-slide-to="4")                
+        div.number
+            p.rank-manager-top5 5
+        p Matt Ryan5
 
 div.tab-content(id="top5-manager-content")
     div(role='tabpanel' class='tab-pane active top-level-panel2' id='week3')
@@ -122,7 +117,7 @@ div.tab-content(id="top5-manager-content")
                                 div.tab-content
                                     div#manager1.tab-pane.active(role="tabpanel")
                                         div.row.player
-                                            div.col-12.col-xs-5.hidden-md-down.col-lg-5
+                                            div.col-12.col-xs-5.hidden-md-down.col-lg-5.no-padding
                                                 div.manager-image
                                                     div.manager-image-inner
                                                         div.number
@@ -233,7 +228,7 @@ div.tab-content(id="top5-manager-content")
                                 div.tab-content
                                     div#manager1.tab-pane.active(role="tabpanel")
                                         div.row.player
-                                            div.col-12.col-xs-5.hidden-md-down.col-lg-5
+                                            div.col-12.col-xs-5.hidden-md-down.col-lg-5.no-padding
                                                 div.manager-image
                                                     div.manager-image-inner
                                                         div.number
@@ -344,7 +339,7 @@ div.tab-content(id="top5-manager-content")
                                 div.tab-content
                                     div#manager1.tab-pane.active(role="tabpanel")
                                         div.row.player
-                                            div.col-12.col-xs-5.hidden-md-down.col-lg-5
+                                            div.col-12.col-xs-5.hidden-md-down.col-lg-5.no-padding
                                                 div.manager-image
                                                     div.manager-image-inner
                                                         div.number
@@ -455,7 +450,7 @@ div.tab-content(id="top5-manager-content")
                                 div.tab-content
                                     div#manager1.tab-pane.active(role="tabpanel")
                                         div.row.player
-                                            div.col-12.col-xs-5.hidden-md-down.col-lg-5
+                                            div.col-12.col-xs-5.hidden-md-down.col-lg-5.no-padding
                                                 div.manager-image
                                                     div.manager-image-inner
                                                         div.number
@@ -566,7 +561,7 @@ div.tab-content(id="top5-manager-content")
                                 div.tab-content
                                     div#manager1.tab-pane.active(role="tabpanel")
                                         div.row.player
-                                            div.col-12.col-xs-5.hidden-md-down.col-lg-5
+                                            div.col-12.col-xs-5.hidden-md-down.col-lg-5.no-padding
                                                 div.manager-image
                                                     div.manager-image-inner
                                                         div.number
