--- a/markup/_layouts/_content/homepage-content_soccer.jade
+++ b/markup/_layouts/_content/homepage-content_soccer.jade
@@ -12,9 +12,9 @@ section.nl-section.homepage.soccer
 				img(src="assets/img/mma.png", alt="", class="sports")
 
 		div.row.top-5-section
-			div.col-12.col-lg-5.col-xl-5.position
+			div.col-12.col-lg-5.col-xl-6.position
 				include _homepage/top5-player-soccer
-			div.col-12.col-lg-6.offset-lg-1.offset-xl-1.col-xl-6.week
+			div.col-12.col-lg-6.col-xl-6.week.no-padding-all-sides
 				include _homepage/top5-manager-soccer
 		div.row.contests.bottom-teams-contests-section
 			div.col-12.col-sm-6.offset-sm-3.col-lg-5.offset-lg-0.col-xl-5.field
