--- a/markup/_scss/sections/_homepage.scss
+++ b/markup/_scss/sections/_homepage.scss
@@ -76,6 +76,10 @@
   }
 }
 
+.text-center {
+  text-align: center;
+}
+
 .nl-section.homepage {
 
   .carousel-item.active, .carousel-item-next, .carousel-item-prev {
@@ -243,6 +247,10 @@
 
   .no-padding {
     padding: 0 15px;
+  }
+
+  .no-padding-all-sides {
+    padding: 0;
   }
 
   .no-padding-mobile {
@@ -435,6 +443,7 @@
     line-height: 0.95rem;
     font-weight: 500;
     margin-bottom: 1.5rem;
+    text-align: center;
   }
 
   .manager-info {
@@ -1012,6 +1021,7 @@
       margin: 0;
       padding: 0;
       font-size: 13px;
+      text-align: center;
     }
 
     h5 {
@@ -1021,14 +1031,50 @@
         margin-bottom: 22px;
       }
 
+      @include respond-to(wide-tablets) {
+        line-height: 1.35rem;
+      }
+
+      @include respond-to(wide-display) {
+        line-height: 1.65rem;
+      }
+
+      @include respond-to(medium-display) {
+        line-height: 1.65rem;
+      }
+
       @include respond-to(allwide) {
         margin-bottom: 28px;
       }
+
+      @include respond-to (large-display) {
+          font-size: 1.65rem;
+          line-height: 1.45rem;
+      }
+
+      @include respond-to (extra-large-display) {
+          font-size: 1.65rem;
+          line-height: 1.45rem;
+      }
+
     }
 
     i {
       font-size: 24px;
       color: #ffffff;
+      text-align: center;
+
+      @include respond-to (large-display) {
+        font-size: 2rem;
+      }
+
+      @include respond-to (extra-large-display) {
+        font-size: 2.15rem;
+      }
+
+      &.fa {
+        display: block;
+      }
     }
 
     @include respond-to(tablets) {
