--- a/markup/_layouts/_content/homepage-content.jade
+++ b/markup/_layouts/_content/homepage-content.jade
@@ -1,4 +1,4 @@
-section.nl-section.homepage
+section.nl-section.homepage.football-homepage
 	div.container-fluid
 		div.row.sports-options
 			h3.title.col-12.col-lg-6 Pick Your Sport:
@@ -13,9 +13,9 @@ section.nl-section.homepage
 
 
 		div.row.top-5-section
-			div.col-12.col-lg-5.col-xl-5.position
+			div.col-12.col-lg-6.col-xl-6.position
 				include _homepage/top5-player
-			div.col-12.col-lg-6.offset-lg-1.offset-xl-1.col-xl-6.week
+			div.col-12.col-lg-6.col-xl-6.week
 				include _homepage/top5-manager
 
 		div.row.contests.bottom-teams-contests-section
