--- a/markup/_scss/sections/_homepage.scss
+++ b/markup/_scss/sections/_homepage.scss
@@ -1,4 +1,60 @@
 /*general for homepage*/
+.nl-section.homepage.football-homepage {
+
+      h5 {
+      margin-bottom: 15px;
+
+      @include respond-to(tablets) {
+        margin-bottom: 22px;
+      }
+
+      @include respond-to(wide-tablets) {
+        line-height: 0.9rem;
+      }
+
+      @include respond-to(medium-display) {
+        line-height: 1rem;
+      }
+
+     @include respond-to(wide-display) {
+        line-height: 1rem;
+      }
+
+      @include respond-to(allwide) {
+        margin-bottom: 28px;
+      }
+
+      @include respond-to (large-display) {
+          font-size: 1.25rem;
+          line-height: 0.8rem;
+      }
+
+      @include respond-to (extra-large-display) {
+          font-size: 1.25rem;
+          line-height: 0.85rem;
+      }
+
+    }
+
+    i {
+      font-size: 24px;
+      color: #ffffff;
+      text-align: center;
+
+      @include respond-to (large-display) {
+        font-size: 2rem;
+      }
+
+      @include respond-to (extra-large-display) {
+        font-size: 2.15rem;
+      }
+
+      &.fa {
+        display: block;
+      }
+    }
+}
+
 .nl-section.homepage.soccer {
 
   #top5-manager-content img.helmet {
@@ -1032,7 +1088,7 @@
       }
 
       @include respond-to(wide-tablets) {
-        line-height: 1.35rem;
+        line-height: 1.65rem;
       }
 
       @include respond-to(wide-display) {
@@ -1040,7 +1096,7 @@
       }
 
       @include respond-to(medium-display) {
-        line-height: 1.65rem;
+        line-height: 1.85rem;
       }
 
       @include respond-to(allwide) {
@@ -1048,13 +1104,13 @@
       }
 
       @include respond-to (large-display) {
-          font-size: 1.65rem;
-          line-height: 1.45rem;
+          font-size: 1.25rem;
+          line-height: 1.65rem;
       }
 
       @include respond-to (extra-large-display) {
-          font-size: 1.65rem;
-          line-height: 1.45rem;
+          font-size: 1.25rem;
+          line-height: 1.55rem;
       }
 
     }
