--- a/markup/_layouts/_content/_homepage/field.jade
+++ b/markup/_layouts/_content/_homepage/field.jade
@@ -2,7 +2,7 @@ div.nl-section.nl-create-team.homepage-field
 	div.row
 		div.col-12.no-padding-mobile
 			h5 MY TEAMS
-		div.col-12.col-md-12.col-lg-12.col-xl-12.no-padding-mobile
+		div.col-12.col-md-8.offset-md-2.col-lg-6.offset-lg-3.col-xl-6.offset-xl-3.no-padding-mobile
 			form.form-signin.dropdown-my-teams
 				.input-group
 					select#country.form-control.custom-select(placeholder='COUNTRY', required='')
