--- a/markup/_scss/sections/_homepage.scss
+++ b/markup/_scss/sections/_homepage.scss
@@ -36,7 +36,7 @@
 
     }
 
-    i {
+    i.fa-info-circle {
       font-size: 24px;
       color: #ffffff;
       text-align: center;
@@ -49,7 +49,7 @@
         font-size: 2.15rem;
       }
 
-      &.fa {
+      &.fa.fa-info-circle {
         display: block;
       }
     }
@@ -1115,7 +1115,7 @@
 
     }
 
-    i {
+    i.fa-info-circle {
       font-size: 24px;
       color: #ffffff;
       text-align: center;
@@ -1128,7 +1128,7 @@
         font-size: 2.15rem;
       }
 
-      &.fa {
+      &.fa.fa-info-circle {
         display: block;
       }
     }
