made new upcoming contest section so enter button could get linked per sport

--- a/markup/_layouts/_content/_homepage/upcoming_contest_soccer.jade
+++ b/markup/_layouts/_content/_homepage/upcoming_contest_soccer.jade
@@ -42,7 +42,7 @@ div.row
 											td 3
 											td 1000
 											td
-												a(href="football_enter_contests.html")
+												a(href="enter_contests.html")
 													button.btn.btn-primary.btn-sm(type='button') enter
 											td STARTED
 										tr
@@ -52,7 +52,7 @@ div.row
 											td 3
 											td 1000
 											td
-												a(href="football_enter_contests.html")
+												a(href="enter_contests.html")
 													button.btn.btn-primary.btn-sm(type='button') enter
 											td STARTED
 										tr
@@ -62,7 +62,7 @@ div.row
 											td 3
 											td 1000
 											td
-												a(href="football_enter_contests.html")
+												a(href="enter_contests.html")
 													button.btn.btn-primary.btn-sm(type='button') enter
 											td STARTED
 										tr
@@ -72,7 +72,7 @@ div.row
 											td 3
 											td 1000
 											td
-												a(href="football_enter_contests.html")
+												a(href="enter_contests.html")
 													button.btn.btn-primary.btn-sm(type='button') enter
 											td STARTED
 										tr
@@ -82,7 +82,7 @@ div.row
 											td 3
 											td 1000
 											td
-												a(href="football_enter_contests.html")
+												a(href="enter_contests.html")
 													button.btn.btn-primary.btn-sm(type='button') enter
 											td STARTED
 										tr
@@ -92,7 +92,7 @@ div.row
 											td 3
 											td 1000
 											td
-												a(href="football_enter_contests.html")
+												a(href="enter_contests.html")
 													button.btn.btn-primary.btn-sm(type='button') enter
 											td STARTED
 										tr
@@ -102,7 +102,7 @@ div.row
 											td 3
 											td 1000
 											td
-												a(href="football_enter_contests.html")
+												a(href="enter_contests.html")
 													button.btn.btn-primary.btn-sm(type='button') enter
 											td STARTED
 										tr
@@ -112,7 +112,7 @@ div.row
 											td 3
 											td 1000
 											td
-												a(href="football_enter_contests.html")
+												a(href="enter_contests.html")
 													button.btn.btn-primary.btn-sm(type='button') enter
 											td STARTED
 										tr
@@ -122,7 +122,7 @@ div.row
 											td 3
 											td 1000
 											td
-												a(href="football_enter_contests.html")
+												a(href="enter_contests.html")
 													button.btn.btn-primary.btn-sm(type='button') enter
 											td STARTED
 										tr
@@ -132,7 +132,7 @@ div.row
 											td 3
 											td 1000
 											td
-												a(href="football_enter_contests.html")
+												a(href="enter_contests.html")
 													button.btn.btn-primary.btn-sm(type='button') enter
 											td STARTED
 										tr
@@ -142,7 +142,7 @@ div.row
 											td 3
 											td 1000
 											td
-												a(href="football_enter_contests.html")
+												a(href="enter_contests.html")
 													button.btn.btn-primary.btn-sm(type='button') enter
 											td STARTED
 										tr
@@ -152,7 +152,7 @@ div.row
 											td 3
 											td 1000
 											td
-												a(href="football_enter_contests.html")
+												a(href="enter_contests.html")
 													button.btn.btn-primary.btn-sm(type='button') enter
 											td STARTED
 										tr
@@ -162,7 +162,7 @@ div.row
 											td 3
 											td 1000
 											td
-												a(href="football_enter_contests.html")
+												a(href="enter_contests.html")
 													button.btn.btn-primary.btn-sm(type='button') enter
 											td STARTED
 										tr
@@ -172,7 +172,7 @@ div.row
 											td 3
 											td 1000
 											td
-												a(href="football_enter_contests.html")
+												a(href="enter_contests.html")
 													button.btn.btn-primary.btn-sm(type='button') enter
 											td STARTED
 										tr
@@ -182,7 +182,7 @@ div.row
 											td 3
 											td 1000
 											td
-												a(href="football_enter_contests.html")
+												a(href="enter_contests.html")
 													button.btn.btn-primary.btn-sm(type='button') enter
 											td STARTED
 										tr
@@ -192,7 +192,7 @@ div.row
 											td 3
 											td 1000
 											td
-												a(href="football_enter_contests.html")
+												a(href="enter_contests.html")
 													button.btn.btn-primary.btn-sm(type='button') enter
 											td STARTED
 										tr
@@ -202,7 +202,7 @@ div.row
 											td 3
 											td 1000
 											td
-												a(href="football_enter_contests.html")
+												a(href="enter_contests.html")
 													button.btn.btn-primary.btn-sm(type='button') enter
 											td STARTED
 										tr
@@ -239,7 +239,7 @@ div.row
 											td 3
 											td 1000
 											td
-												a(href="football_enter_contests.html")
+												a(href="enter_contests.html")
 													button.btn.btn-primary.btn-sm(type='button') enter
 											td STARTED
 										tr
@@ -249,7 +249,7 @@ div.row
 											td 3
 											td 1000
 											td
-												a(href="football_enter_contests.html")
+												a(href="enter_contests.html")
 													button.btn.btn-primary.btn-sm(type='button') enter
 											td STARTED
 										tr
@@ -259,7 +259,7 @@ div.row
 											td 3
 											td 1000
 											td
-												a(href="football_enter_contests.html")
+												a(href="enter_contests.html")
 													button.btn.btn-primary.btn-sm(type='button') enter
 											td STARTED
 										tr
